--- a/subway/uht/downloadcomplete.html
+++ b/subway/uht/downloadcomplete.html
@@ -832,9 +832,10 @@ margin-left: 38px;
         <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
         <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
         <p>If you do not have a BN, you must apply for one <strong>and</strong> register your RU program account before you can file your return.</p>
-        <p>You will be able to register your RU program account online after <strong><span class="nowrap">February 6, 2023</span></strong> through the following link:</p>
+        <p>You can register your RU program account online through the following link:</p>
         <p><a href="https://canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program account</a></p>
        <p>[Distinguish how to get an RU #]</p>
+		<p></p>
 	  </details>
 	 <h3>Multiple residential properties</h3>
         <p>If you are an affected owner who owns two or more residential properties in Canada on <span class="nowrap">December 31</span>, you must file a separate Underused Housing Tax return for each property.</p>	  
