--- a/subway/uht/downloadcomplete.html
+++ b/subway/uht/downloadcomplete.html
@@ -832,9 +832,8 @@ margin-left: 38px;
         <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
         <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
         <p>If you do not have a BN, you must apply for one <strong>and</strong> register your RU program account before you can file your return.</p>
-        <p>You can register your RU program account online through the following link:</p>
-        <p><a href="https://canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program account</a></p>
-       <p>[Distinguish how to get an RU #]</p>
+        <p>You can register for your RU program account online through: <a href="https://canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program account</a></p>
+       <p><strong>[Distinguish how to get an RU #]</strong></p>
 		<p></p>
 	  </details>
 	 <h3>Multiple residential properties</h3>
