--- a/subway/uht/sendreturn.html
+++ b/subway/uht/sendreturn.html
@@ -794,11 +794,14 @@ margin-left: 38px;
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Send the return</h1>
 			
-     You may either use electronic filing, or you may send your return by mail.</p>
+     <p>You can file your UHT return in <a href="">My Account</a> or <a href="">My Business Account</a></p>
+		 <p>If you are not registered for CRA's online portals, you may either use electronic filing, or you may send your return by mail.</p>
       <dl class="dl-horizontal">
         <dt>Electronically</dt>
         <dd><p><a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtFlng?request_locale=en_CA">Submit your Underused Housing Tax return electronically</a></p> 
-			<p>When you submit, you will be presented with a list of requirements to complete.</dd>
+			<p>When you submit, you will be presented with a list of requirements to complete your submission.</p>
+	<p>One of the requirements is to <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrDc.action?utm_source=Canada_dot_ca&utm_medium=News_Item">get a Digital Access Code (DAC)</a>. If you need assistance, you can call the UHT filing helpdesk toll free at 1-800-387-0720, or call collect at 613-221-3224.</p>
+	</dd>
         <dt>By mail</dt>
         <dd>
           <p>Where you send your return depends on you (as an individual), or your corporation's location.</p>
