--- a/subway/uht/sendreturn.html
+++ b/subway/uht/sendreturn.html
@@ -870,7 +870,7 @@ margin-left: 38px;
         </dd>
       </dl>	  
 <details>
-	<summary>[How to file an election]</summary>
+	<summary>[How to file an election (Done within the return)]</summary>
 	
 			<p>You may want to file an election for <strong>either of the following</strong> reasons:</p>
 			<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
@@ -897,7 +897,7 @@ margin-left: 38px;
      <p><mark>[TO BE AN ALERT]: The application of penalties and interest under the Underused Housing Tax Act (UHTA) for the 2022 calendar year will be waived for any late-filed Underused Housing Tax (UHT) return and for any late-paid UHT payable, provided the return  is filed or the UHT is paid by October 31, 2023.  Where a fair market value election for a residential property for the 2022 calendar year, or an election/joint election to designate a residential property for the 2022 calendar year, is filed as part of a late-filed UHT return, the CRA will allow the election provided the return is filed by October 31, 2023. In the case of a fair market value election for a residential property for the 2022 calendar year, the fair market value must be established between January 1, 2022, and April 30, 2023. </mark></p>
 <h3>Penalties for failing to file the return on time</h3>
       <p>There are significant penalties if you fail to file an&nbsp;Underused Housing Tax return when it is due. Affected owners who are individuals are subject to a minimum penalty of <span class="nowrap">$5,000</span>. Affected owners that are corporations are subject to a minimum penalty of <span class="nowrap">$10,000</span>.</p>
-
+<p>In addition to those penalties, you will also have to pay any Underused Housing Tax and interest due.</p>
 
 
 
