--- a/subway/uht/sendreturn.html
+++ b/subway/uht/sendreturn.html
@@ -899,7 +899,7 @@ margin-left: 38px;
       <p>There are significant penalties if you fail to file an&nbsp;Underused Housing Tax return when it is due. Affected owners who are individuals are subject to a minimum penalty of <span class="nowrap">$5,000</span>. Affected owners that are corporations are subject to a minimum penalty of <span class="nowrap">$10,000</span>.</p>
 <p>In addition to those penalties, you will also have to pay any Underused Housing Tax and interest due.</p>
 
-
+<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn3/filing-return-paying-underused-housing-tax.html#_Toc121913351">Penalties for failing to file a return</a></p>
 
 		   <h2 id="h_6">Keep your records</h2>
         <p>If you are an affected owner of a residential property in Canada on <span class="nowrap">December 31</span>, you must file an Underused Housing Tax return for the residential property. You must also keep records to support the determination of your obligations and liabilities. Even if your ownership is exempt and you do not have to pay the tax, you must still keep records. If you claim an exemption but do not have adequate records to support that exemption, we <strong>may disallow</strong> it.</p>  
