--- a/subway/uht/paytax.html
+++ b/subway/uht/paytax.html
@@ -838,10 +838,10 @@ margin-left: 38px;
 
 <h3>Pay by wire transfer or internationally issued credit card</h3>
 <p> If you are an individual or a corporation, you might not have a Canadian bank account. In that case, you may pay using a wire transfer or an internationally issued credit card.</p>
-<p><a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-wire-transfer-non-residents.html">Pay without a Canadian bank account</a> (available after February 6, 2023).</p>
+<p><a href="/en/revenue-agency/services/about-canada-revenue-agency-cra/pay-wire-transfer-non-residents.html">Pay without a Canadian bank account</a>.</p>
 <h3>Pay by cheque</h3>
 
-<p>If you would like to mail a cheque, make it out to: </p>
+<p>If you would like to mail a cheque, make it out in Canadian dollars to: </p>
 <p>The Receiver General for Canada.</p>
 
 <p>Include the following information:</p>
@@ -863,10 +863,10 @@ margin-left: 38px;
    </ul>
   </li>
 </ul>
-<p>Send your cheque to the following address:</p>
+		 <p>If you are filing by paper, your payment should accompany your return and be sent to the designated TC address. If you have previously filed by paper and have received a Notice of Assessment with an amount owing, send your cheque to the following address:</p>
    <p>Canada Revenue Agency <br> PO Box 3800 STN A <br> Sudbury ON P3A 0C3</p>
    
-   <p>More information on how individuals can make a payment will be available in February 2023, so keep checking this page for updates.</p>
+   <p>If you filed electronically and choose to mail a cheque, send your cheque to the address noted above.</p>
   
   
 
