--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -812,7 +812,52 @@ margin-left: 38px;
 		 
 <ol class="lst-stps stps-strpd">
 <li><h3>Part 1 - Information about the owner </h3>
-Content
+  <h4>Tax identifier numbers</h4>
+      <p>You must have a valid CRA tax identifier number to file your Underused Housing Tax return. The following tax identifier numbers may be used depending on the situation:</p>
+      <ul>
+        <li>A social insurance number (SIN)</li>
+        <li>An individual tax number (ITN)</li>
+<li>A temporary tax number (TTN)</li>
+        <li>A Canadian business number (BN) with an Underused Housing Tax (RU) program account identifier code</li>
+      </ul>
+
+ 
+          <p>
+    <span class="fas fa-ban mrgn-rght-sm text-danger fa-lg"></span><strong>Note:</strong> A trust account number (TAN) cannot be used to file Underused Housing Tax returns.</p>
+   
+
+
+        <details><summary>Tax identifier numbers for individuals</summary>
+        <p>Depending on your citizenship, if you are an individual, you must file your Underused Housing Tax return using either a SIN, an ITN, or a TTN.</p>
+        <p>If you are an individual who is a <strong>Canadian citizen or permanent resident</strong>, you <strong>must use a SIN</strong> to file your return.</p>
+        <p>If you do not already have a SIN, please contact <a href="https://canada.ca/en/employment-social-development/services/sin.html">Service Canada</a> for information on how to apply for one.</p>
+        <p>If you are an individual who is <strong>not a Canadian citizen or permanent resident</strong>, and you already have a SIN, you must use your SIN to file your return.</p>
+        <p>If you <strong>do not have a SIN</strong>, you <strong>must use an ITN</strong> to file your return. If you do not have an ITN, you must apply for one.</p>
+       
+	
+			
+		<p>If you are a non-resident needing an ITN, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html">Applying for an individual tax number (ITN)</a></p>	  
+
+	<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out Form T1261 and attaching it to your completed paper UHT return. Make sure to submit your Form T1261, all required supporting documentation, and your UHT return together.  </p>
+	
+	
+	</details>
+        <details><summary>Tax identifier numbers for corporations</summary>
+        <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
+        <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
+        <p>If you do not have a BN, you must apply for one <strong>and</strong> register your RU program account before you can file your return.</p>
+        <p>You can register for your RU program account online through: <a href="https://canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program account</a></p>
+       <p><strong>[Distinguish how to get an RU #]</strong></p>
+		<p></p>
+	  </details>
+
+
+
+
+
+
+
+	
 </li>
 <li><h3>Gather your documents</h3>
 Your application must include:<ul>
