--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -859,13 +859,14 @@ margin-left: 38px;
 
 	
 </li>
-<li><h3>Gather your documents</h3>
-Your application must include:<ul>
-<li>your printed application form</li>
-<li>the original, certified, or notarized copies of your supporting documents</li>
-</ul>
-We will return any original documents that you submit. We will not return certified copies of documents.</li>
-<li><h3>Mail your application</h3>
+<li><h3>Part 2 - Information about your residential property in Canada</h3>
+<h4>Determine your ownership percentage</h4>
+	Content
+	<h4>Determine the value of the residential property</h4>
+Content</li>
+
+	
+	<li><h3>Mail your application</h3>
 Mail or courier your signed application and documents to the CRA.<br><p>Attn: ITN unit<br>
 Services and Benefits<br>
 Section Benefits Division<br>
