--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -861,9 +861,14 @@ margin-left: 38px;
 </li>
 <li><h3>Part 2 - Information about your residential property in Canada</h3>
 <h4>Determine your ownership percentage</h4>
-	Content
+	If you are the only owner of the residential property, your ownership percentage is 100%
+	If you are one of several owners of the residential property, your ownership percentage is either of the following 
+<ul><li>the percentage of your ownership as indicated in the land registration system</li></ul>
+	<ul><li>100% divided by the number of owners, if no percentage is indicated in the land registration system</li></ul>
 	<h4>Determine the value of the residential property</h4>
-Content</li>
+Content
+
+</li>
 
 	
 	<li><h3>Mail your application</h3>
