--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,7 +797,7 @@ margin-left: 38px;
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
 		 <p>Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return.</p> 
-		
+		<p>If you are an affected owner of a residential property on December 31 who shares ownership with one or more co-owners who are also affected owners, each of you must file a separate return for the property. You must each file separate returns even if your respective ownership qualifies for an exemption.</p>
 			
 
 
@@ -891,7 +891,7 @@ margin-left: 38px;
 </li>
 
 	
-	<li><h3>Mail your application</h3>
+	<li><h3>Part 3 - Multiple residential properties</h3>
 Mail or courier your signed application and documents to the CRA.<br><p>Attn: ITN unit<br>
 Services and Benefits<br>
 Section Benefits Division<br>
