--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -869,7 +869,7 @@ margin-left: 38px;
       
 	<p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
       <p>An affected owner electing to use the fair market value of a residential property to calculate Underused Housing Tax owing must get an appraisal of the property. The appraisal report must be prepared by an accredited, professional real estate appraiser operating at arm’s length from the owner. The intended use of the appraisal report must be to assist in the administration of the Underused Housing Tax Act.</p>
-     
+     <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
 </p>        [Determine <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">taxable value</a> vs. <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091884">fair market value</a>] </p>
 
 <details>
@@ -892,16 +892,10 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 3 - Multiple residential properties</h3>
-Mail or courier your signed application and documents to the CRA.<br><p>Attn: ITN unit<br>
-Services and Benefits<br>
-Section Benefits Division<br>
-Sudbury Tax Centre<br>
-1050 Notre Dame Ave<br>
-Sudbury ON P3A 5C1<br>
-Canada</p>
+If you are an affected owner who owns two or more residential properties in Canada on December 31, you must file a separate Underused Housing Tax return for each property.
 </li>
-	<li><h3>Content</h3>
-Explanatory content
+	<li><h3>Part 4 & 5 - Exemptions</h3>
+To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.
 </li>
 </ol>	 
 		
