--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -861,10 +861,12 @@ margin-left: 38px;
 </li>
 <li><h3>Part 2 - Information about your residential property in Canada</h3>
 <h4>Determine your ownership percentage</h4>
-	If you are the only owner of the residential property, your ownership percentage is 100%
-	If you are one of several owners of the residential property, your ownership percentage is either of the following 
-<ul><li>the percentage of your ownership as indicated in the land registration system</li></ul>
-	<ul><li>100% divided by the number of owners, if no percentage is indicated in the land registration system</li></ul>
+	<p>If you are the only owner of the residential property, your ownership percentage is 100%</p>
+	<p>If you are one of several owners of the residential property, your ownership percentage is either of the following:</p> 
+<ul>
+	<li>the percentage of your ownership as indicated in the land registration system</li>
+	<li>100% divided by the number of owners, if no percentage is indicated in the land registration system</li>
+</ul>
 	<h4>Determine the value of the residential property</h4>
       
 	<p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
@@ -892,11 +894,36 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 3 - Multiple residential properties</h3>
-If you are an affected owner who owns two or more residential properties in Canada on December 31, you must file a separate Underused Housing Tax return for each property.
+<p>If you are an affected owner who owns two or more residential properties in Canada on December 31, you must file a separate Underused Housing Tax return for each property.</p>
 </li>
 	<li><h3>Part 4 & 5 - Exemptions</h3>
-To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.
+<p>To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.</p>
 </li>
+
+	<li><h3>Part 7 - Fair market value (FMV) election</h3></li>
+<p>Content</p>
+	<li><h3>Part 8 - Calculation of tax payable</h3></li>
+	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
+		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
+      <li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Underused Housing Tax rate (1%)</span> </li>
+      <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Ownership percentage</span></li>
+      <li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Underused Housing Tax amount</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
+    </ul>
+    <details>
+    <summary>Calculation example</summary>
+    <p>If the value of the residental property is $500,000 and you have a 50% ownership for the year 2023.</p>
+   <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
+      <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$500,000 (value of the property)</span></li>
+      <li><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">1% (Underused Housing Tax rate)</span> </li>
+      <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">50% (Ownership percentage)</span></li>
+      <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,000 (Underused Housing Tax amount for 2023)</span></li>
+    </ul>
+    </details>
+
+
+
+	
 </ol>	 
 		
 		 
