--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -903,6 +903,7 @@ margin-left: 38px;
 	<li><h3>Part 7 - Fair market value (FMV) election</h3></li>
 <p>Content</p>
 	<li><h3>Part 8 - Calculation of tax payable</h3></li>
+	<p>If your ownership of a residential property does not qualify for an exemption from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
 	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="text-muted h5">Value of the property</span></li>
