--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -901,7 +901,11 @@ margin-left: 38px;
 </li>
 
 	<li><h3>Part 7 - Fair market value (FMV) election</h3></li>
-<p>Content</p>
+<p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
+<p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
+
+
+	
 	<li><h3>Part 8 - Calculation of tax payable</h3></li>
 	<p>If your ownership of a residential property does not qualify for an exemption from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
 	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
