--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -812,8 +812,11 @@ margin-left: 38px;
 		 
 <ol class="lst-stps stps-strpd">
 <li><h3>Part 1 - Information about the owner </h3>
-  <h4>Tax identifier numbers</h4>
-      <p>You must have a valid CRA tax identifier number to file your Underused Housing Tax return. The following tax identifier numbers may be used depending on the situation:</p>
+<p>You must have a valid CRA tax identifier number to file your Underused Housing Tax return.</p>
+
+	<details>
+  <summary>Tax identifier numbers</summary>
+      <p>The following tax identifier numbers may be used depending on the situation:</p>
       <ul>
         <li>A social insurance number (SIN)</li>
         <li>An individual tax number (ITN)</li>
@@ -850,6 +853,7 @@ margin-left: 38px;
        <p><strong>[Distinguish how to get an RU #]</strong></p>
 		<p></p>
 	  </details>
+	</details>
 
 
 
