--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -864,14 +864,18 @@ margin-left: 38px;
 	
 </li>
 <li><h3>Part 2 - Information about your residential property in Canada</h3>
-<h4>Determine your ownership percentage</h4>
+	<p>You must determine your ownership percentage, as well as the value of the residential property</p>
+	<details>
+<summary>Determine your ownership percentage</summary>
 	<p>If you are the only owner of the residential property, your ownership percentage is 100%</p>
 	<p>If you are one of several owners of the residential property, your ownership percentage is either of the following:</p> 
 <ul>
 	<li>the percentage of your ownership as indicated in the land registration system</li>
 	<li>100% divided by the number of owners, if no percentage is indicated in the land registration system</li>
 </ul>
-	<h4>Determine the value of the residential property</h4>
+	</details>
+	<details>
+	<summary>Determine the value of the residential property</summary>
       
 	<p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
       <p>An affected owner electing to use the fair market value of a residential property to calculate Underused Housing Tax owing must get an appraisal of the property. The appraisal report must be prepared by an accredited, professional real estate appraiser operating at arm’s length from the owner. The intended use of the appraisal report must be to assist in the administration of the Underused Housing Tax Act.</p>
@@ -893,6 +897,7 @@ margin-left: 38px;
 <p>If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
 	
 </details>
+	</details>
 
 </li>
 
