--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -909,10 +909,10 @@ margin-left: 38px;
 <p>To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.</p>
 </li>
 
-	<li><h3>Part 7 - Fair market value (FMV) election</h3></li>
+	<li><h3>Part 7 - Fair market value (FMV) election</h3>
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
 <p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
-
+	</li>
 
 	
 	<li><h3>Part 8 - Calculation of tax payable</h3></li>
