--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -915,7 +915,7 @@ margin-left: 38px;
 	</li>
 
 	
-	<li><h3>Part 8 - Calculation of tax payable</h3></li>
+	<li><h3>Part 8 - Calculation of tax payable</h3>
 	<p>If your ownership of a residential property does not qualify for an exemption from the Underused Housing Tax for a calendar year, you must calculate what you owe for the calendar year.</p>
 	<p>The tax rate of the Underused Housing Tax is 1%. To calculate what you owe, multiply the value of the residential property by the 1% tax rate. Then multiply that result by your ownership percentage of the property.</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
@@ -934,6 +934,7 @@ margin-left: 38px;
       <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,000 (Underused Housing Tax amount for 2023)</span></li>
     </ul>
     </details>
+	</li>
 
 
 
