--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -907,6 +907,7 @@ margin-left: 38px;
 </li>
 	<li><h3>Part 4 & 5 - Exemptions</h3>
 <p>To qualify for the exemption for primary place of residence, or the exemption for qualifying occupancy, you must file an election by completing the sections.</p>
+		<p>Filing an election for the exemption is done within the UHT return.</p>
 </li>
 
 	<li><h3>Part 7 - Fair market value (FMV) election</h3>
