--- a/subway/uht/index.html
+++ b/subway/uht/index.html
@@ -970,12 +970,13 @@ input[type='radio'] {
                             <li><a href="whomust.html">Who must file a return and pay the tax</a><br>
                                 [Details]
                             </li>
-                            <li><a href="calculate.html">Calculate what you owe</a><br>
+				<li><a href="duedate.html">Filing and payment due date</a><br>
                                 [Details]
                             </li>
-				<li><a href="downloadcomplete.html">Download and complete your return</a><br>
+                            <li><a href="complete-return.html">Complete the return</a><br>
                                 [Details]
                             </li>
+				
                             <li><a href="sendreturn.html">Send the return</a><br>
                                 [Details]
                             </li>
