--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -781,6 +781,7 @@ margin-left: 38px;
                <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
               <ul class="gc-navseq">
                 <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
+		      <li><a href="duedate.html">Filing and payment due date</span></a></li>
 		      <li class="active"><a aria-current="page"><a href="complete-return.html">Complete the return</span></a></li>
                 <li><a href="sendreturn.html">Send the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
