--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -780,8 +780,8 @@ margin-left: 38px;
                <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
                <ul class="gc-navseq">
                 <li><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
-                <li><a href="calculate.html">Calculate what you owe</span></a></li>
-	<li><a href="calculate.html">Download and comlete the return</span></a></li>
+                <li><a href="duedate.html">Filing and payment due date</span></a></li>
+	<li><a href="complete-return.html">Complete the return</span></a></li>
                 <li><a href="sendreturn.html">Send the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
                 <li class="active"><a aria-current="page"><a href="contact.html">Contact us</span></a></li>
