--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -809,6 +809,13 @@ margin-left: 38px;
 	      <ul><li>File an election to use the fair market value to calculate the tax you owe, or to qualify for the exemptions for primary place of residence or qualifying occupancy, <strong>along with the return</strong></li></ul>
       <li>Pay any Underused Housing Tax you owe from the previous calendar year</li>
       </ul>
+
+<p>Your payment for a calendar year is due by <span class="nowrap">April 30</span> of the following calendar year.</p>
+<p>	If you do not pay your Underused Housing Tax owing by <span class="nowrap">April 30</span>, we will begin charging you interest on the amount you owe.</p>
+<p>For more information: <a href="/en/revenue-agency/services/tax/prescribed-interest-rates.html">Prescribed interest rates</a></p>
+
+
+		 
    <section class="alert alert-info">
   <h3>Penalities and interest waived for the 2022 calendar year</h3>
 
