--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -798,9 +798,13 @@ margin-left: 38px;
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
 		 
-		
+		<p>The due date to file your return from the previous calendar year, and to file an election (done within the return) is:</p>
+		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30</strong></li>
 			
+<p>The due date to pay any Underused Housing Tax owing from the previous calendar year is:</p>
+		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30</strong></li>
 
+		 
 <h2>Due date</h2>
 		 <p><span class="h4"><span class="fas fa-calendar-day fa-lg mrgn-rght-sm"></span>April 30</span> is the date <strong>you must</strong>:</p>		  
 		  
