--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -802,7 +802,9 @@ margin-left: 38px;
 		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30</strong></li>
 			
 <p>The due date to pay any Underused Housing Tax owing from the previous calendar year is:</p>
+		 <ul class="fa-ul small">
 		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30</strong></li>
+		 </ul>
 
 		 
 <h2>Due date</h2>
