--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -798,12 +798,12 @@ margin-left: 38px;
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
 		 
-		<p>The due date to file your return from the previous calendar year, and to file an election (done within the return) is:</p>
-		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30</strong></li>
+		<p>The due date to file your return, and to file an election (done within the return) is:</p>
+		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30 of the following calendar year</strong></li>
 			
-<p>The due date to pay any Underused Housing Tax owing from the previous calendar year is:</p>
+<p>The due date to pay any Underused Housing Tax owing is:</p>
 		 <ul class="fa-ul small">
-		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30</strong></li>
+		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30 of the following calendar year</strong></li>
 		 </ul>
 
 		 
