test calendar dates

--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -799,7 +799,9 @@ margin-left: 38px;
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
 		 
 		<p>The due date to file your return, and to file an election (done within the return) is:</p>
+		 <ul class="fa-ul md">
 		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30 of the following calendar year</strong></li>
+		 </ul>
 			
 <p>The due date to pay any Underused Housing Tax owing is:</p>
 		 <ul class="fa-ul small">
