--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -796,7 +796,7 @@ margin-left: 38px;
            
 		
 	  
-		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
+		
 		 
 		<p>The due date to file your return, and to file an election (done within the return) is:</p>
 		 <ul class="fa-ul md">
@@ -804,16 +804,14 @@ margin-left: 38px;
 		 </ul>
 			
 <p>The due date to pay any Underused Housing Tax owing is:</p>
-		 <ul class="fa-ul small">
+		 <ul class="fa-ul md">
 		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30 of the following calendar year</strong></li>
 		 </ul>
 
 		 
 
 
-<p>Your payment for a calendar year is due by <span class="nowrap">April 30</span> of the following calendar year.</p>
-<p>	If you do not pay your Underused Housing Tax owing by <span class="nowrap">April 30</span>, we will begin charging you interest on the amount you owe.</p>
-<p>For more information: <a href="/en/revenue-agency/services/tax/prescribed-interest-rates.html">Prescribed interest rates</a></p>
+
 
 
 		 
@@ -827,6 +825,10 @@ margin-left: 38px;
 <h3>Penalties for failing to file the return on time</h3>
       <p>There are significant penalties if you fail to file an&nbsp;Underused Housing Tax return when it is due. Affected owners who are individuals are subject to a minimum penalty of <span class="nowrap">$5,000</span>. Affected owners that are corporations are subject to a minimum penalty of <span class="nowrap">$10,000</span>.</p>
 <p>In addition to those penalties, you will also have to pay any Underused Housing Tax and interest due.</p>
+
+		 <p>	If you do not pay your Underused Housing Tax owing by <span class="nowrap">April 30</span>, we will begin charging you interest on the amount you owe.</p>
+<p>For more information: <a href="https://www.canada.ca/en/revenue-agency/services/tax/prescribed-interest-rates.html">Prescribed interest rates</a></p>
+
 
 <p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn3/filing-return-paying-underused-housing-tax.html#_Toc121913351">Penalties for failing to file a return</a></p>
 
