--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -798,15 +798,11 @@ margin-left: 38px;
 	  
 		
 		 
-		<p>The due date to file your return, and to file an election (done within the return) is:</p>
+		<p>The due date to file your Underused Housing Tax return, to file an election (done within the return), and to pay any Underused Housing Tax owing  is:</p>
 		 <ul class="fa-ul md">
 		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30 of the following calendar year</strong></li>
 		 </ul>
 			
-<p>The due date to pay any Underused Housing Tax owing is:</p>
-		 <ul class="fa-ul md">
-		 <li><span class="far fa-calendar-alt fa-li text-muted"></span> <strong>April 30 of the following calendar year</strong></li>
-		 </ul>
 
 		 
 
