--- a/subway/uht/duedate.html
+++ b/subway/uht/duedate.html
@@ -804,14 +804,20 @@ margin-left: 38px;
 		 </ul>
 			
 
-		 
+	<br>	 
 
 
 
 
 
 		 
-   <section class="alert alert-info">
+   <section class="alert alert-info">   
+  <p>The application of penalties and interest under the Underused Housing Tax Act (UHTA) for the 2022 calendar year will be waived for any late-filed Underused Housing Tax (UHT) return and for any late-paid UHT payable, provided the return is filed or the UHT is paid by October 31, 2023. Where a fair market value election for a residential property for the 2022 calendar year, or an election/joint election to designate a residential property for the 2022 calendar year, is filed as part of a late-filed UHT return, the CRA will allow the election provided the return is filed by October 31, 2023. In the case of a fair market value election for a residential property for the 2022 calendar year, the fair market value must be established between January 1, 2022, and April 30, 2023.</p>
+</section>
+
+
+
+		   <section class="alert alert-info">
   <h3>Penalities and interest waived for the 2022 calendar year</h3>
 
 	   
