clean: excluded vs affected

--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -832,30 +832,16 @@ margin-left: 38px;
 				<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">Owner of residential property</a></p>
 		 </details>	
 		 <br>
-				<p>If you are not an <strong>excluded owner</strong> (not subject to the tax) we refer to you as an <strong>affected owner</strong> (subject to the tax).</p>
-<details>
-	<summary>[Content to go through]</summary>
+				<p>If you are an <strong>affected owner</strong>, you must file an annual Underused Housing Tax return for each of your residential properties. </p>
 		 
-		 
-		 <p>If you are an affected owner, you have to file an annual return for each of your residential properties. Whether you have to pay the underused housing tax for the residential property depends on whether your ownership of the residential property is exempt from the tax for a calendar year.</p>
-		 <p>Even if your ownership of a residential property is exempt from the underused housing tax for a calendar year, if you are an affected owner, you still have to file a return for the residential property and indicate the applicable exemption in your return.</p>
-<p>In most situations, if you are an affected owner you must pay the Underused Housing Tax for the calendar year for each residential property you own on December 31. However, if your ownership qualifies for an exemption, you will not have to pay the tax for the calendar year.</p>
-	<p>Even if your ownership of a residential property qualifies for an exemption for the calendar year, you must still file an annual return for the property for the calendar year.</p>
-<p>If you are uncertain about your obligations and liabilities under the UHTA, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
-		 <p>If you are an affected owner of a residential property, you must file an annual return. Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return. </p>
-	<p>Only excluded owners do not have to file a return.</p>
-		 <p>If you are an affected owner of a residential property, you must file a return for the Underused Housing Tax. You must also pay the 1% tax unless your ownership of the property qualifies for an exemption.</p>
-	<p>[Remember that even if you do not have to pay the Underused Housing Tax because your ownership of a residential property qualifies for an exemption for a calendar year, you still have to file an annual return for the property for the calendar year.] - repeated in tool</p>
-		 </details>
+		 <p>In most situations, affected owners of residential properties on December 31, must pay the Underused Housing Tax for each residential property they own. However, if your ownership of the property qualifies for an exemption, you will not have to pay the tax for the calendar year.</p>
+		 <p>Even if your ownership of a residential property qualifies for an exemption from paying the tax for the calendar year, you must still file an annual return for the property, and indicate the applicable exemption in your return.</p>
+		 <p>If you are not an affected owner, we refer to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
+		 <p>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
 		 
 		 
 		 
-		 
-		 
-		 
-		 
-		 
-            <h2>Determine if you are an excluded owner or an affected owner</h2>
+            <h2>Determine if you are an affected owner or an excluded owner</h2>
 		     <p>The following provides the same information in <strong>two</strong> different formats:</p>
       <ul class="cnjnctn-type-or cnjnctn-sm">
         <li class="cnjnctn-col">Answer <a href="#interactive" class="wb-tabs-ext">some interactive questions</a> to determine your ownership situation and if exempt</li>
