--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -138,9 +138,7 @@
 	                </details>
 	 
             <h2 id="h-2">How to open an FHSA</h2>
-            <p>Before you open an FHSA, you have to determine if you are a qualifying individual. For more information, go to <a href="#h_1">Who can open an FHSA</p>
-          <p>You can open an FHSA through an FHSA&nbsp;<a href="#issuer" aria-controls="issuer" class="wb-lbx" role="button">issuer&nbsp;<span class="far fa-question-circle"></span></a> such as a bank, credit union, or a trust or insurance company. Your issuer will advise you on the types of FHSAs and the <a href="#qualinv" aria-controls="qualinv" class="wb-lbx" role="button">qualified investments&nbsp;<span class="far fa-question-circle"></span></a> they can contain.</p>
-<p>You can have more than one FHSA at any given time, but in order to avoid unintended tax consequences, the total amount you can contribute to all of your FHSAs and transfer from your RRSPs to all your FHSAs in a calendar year cannot be more than your <a href="#fhsapartroom" aria-controls="fhsapartroom" class="wb-lbx" role="button">FHSA participation room&nbsp;<span class="far fa-question-circle"></span></a> for that year.</p>
+          <p>You can open one or more than one FHSA through an FHSA issuer, such as a bank, credit union, or a trust or insurance company. Your issuer will advise you on the types of FHSAs and the <a href="#qualinv" aria-controls="qualinv" class="wb-lbx" role="button">qualified investments&nbsp;<span class="far fa-question-circle"></span></a> they can contain.</p>
 <p>To open an FHSA, you must do the following:</p>
 <ol class="lst-stps">
 <li><h3>Contact your issuer</h3>
@@ -153,21 +151,20 @@
 </ul>
 </li>
 </ol>
-<div class="alert alert-info"><p>If you do <strong>not</strong> provide the required information to the issuer, the issuer will not open an FHSA on your behalf.</p>
 <p>If you provide information to the issuer and it is subsequently determined that you provided incorrect information, it is possible that the registration of your FHSA may be revoked as far back as the date on which it was opened.</p>
 <p>The following <strong>will</strong> apply after the date of revocation:</p>
 <ul>
 <li>any contributions made to the account will not be tax-deductible</li>
 <li>any amounts transferred from your RRSPs&nbsp;to the account will be treated as an RRSP withdrawal and must be reported as income on your income tax and benefit return for the year of transfer</li>
 <li>any income earned under the account will not be tax-free and must be reported on your income tax and benefit return for the year it was earned</li>
-</ul>
+</ul> </div>
 <p>When you open your FHSAs, you may want to designate a beneficiary on your account. For more information, go to <a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/death-and-fhsas.html#h_2">Types of beneficiaries</a>.</p>
-</div>
+
 
     
 
 
-</div>
+
 <div class="mwsbodytext text parbase section">
     
 
@@ -188,7 +185,6 @@
 </ul>
 </li>
 </ul>
-<p>Banks, insurance companies, credit unions and trust companies can be FHSA issuers which offer FHSAs.</p>
 <p>For information about a type of FHSA, contact an FHSA issuer.</p>
 <h3>Self-directed FHSA</h3>
 <p>You can set up a self-directed FHSA if you prefer to build and manage your investment portfolio by buying and selling different types of qualified investments. For more information, contact an FHSA issuer.</p>
