--- a/payroll/calculate/payment/resp.html
+++ b/payroll/calculate/payment/resp.html
@@ -266,7 +266,7 @@
 </nav>
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Payments from a registered education savings plan (RESP)</h1>
-<p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/resp-accumulated-income-payments.html"></a> RESP - Accumulated income payments</p>
+<p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/resp-accumulated-income-payments.html"> RESP - Accumulated income payments</a></p>
 <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
                      <li><a href="">Add if necessary</a></li>
