--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -151,6 +151,7 @@
 </ul>
 </li>
 </ol>
+		 <div class="alert alert-warning">
 <p>If you provide information to the issuer and it is subsequently determined that you provided incorrect information, it is possible that the registration of your FHSA may be revoked as far back as the date on which it was opened.</p>
 <p>The following <strong>will</strong> apply after the date of revocation:</p>
 <ul>
